Can't Select Bones in Weight paint mode with Left mouse Selection enabled #34143

Closed
opened 2013-02-06 23:00:56 +01:00 by bassam kurdali · 4 comments
Member

%%%Recently Weight Gradient was added with the hotkey alt-Left Mouse. This is the same hotkey used for selecting a bone - weight group while in weight paint mode - but only if you have Left mouse selection (right mouse selection uses right mouse with alt key for the same function)

Suggestion is to change the keymap to Alt-Action Mouse (and Ctrl-Alt-Action Mouse) so that it is neautral to left select users.

- Operating System, Graphics card ---


- Blender version with error, and version that worked ---

trunk, worked in versions previous to the weight paint gradient

- Short description of error ---


- Steps for others to reproduce the error (preferably based on attached .blend file) ---

%%%

%%%Recently Weight Gradient was added with the hotkey alt-Left Mouse. This is the same hotkey used for selecting a bone - weight group while in weight paint mode - but only if you have Left mouse selection (right mouse selection uses right mouse with alt key for the same function) Suggestion is to change the keymap to Alt-Action Mouse (and Ctrl-Alt-Action Mouse) so that it is neautral to left select users. - Operating System, Graphics card --- - Blender version with error, and version that worked --- trunk, worked in versions previous to the weight paint gradient - Short description of error --- - Steps for others to reproduce the error (preferably based on attached .blend file) --- %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Hi Cam,

I saw you added this 22 december. Also PAINT_OT_weight_sample is using LEFTMOUSE here.
Probably both could be mapped to ACTIONMOUSE.%%%

%%%Hi Cam, I saw you added this 22 december. Also PAINT_OT_weight_sample is using LEFTMOUSE here. Probably both could be mapped to ACTIONMOUSE.%%%

%%%Alt+Left mouse was never added intentionally to be used in weight paint mode, its supposed to open up a menu of items to select. it just happens not to when selecting pose bones.

Making weight sample use ACTIONMOUSE means Ctrl+Left Mouse can be used for bone selection now.
I looked into using ACTIONMOUSE for gradient tool but right click cancels from the gradient tool, which is a modal operator so Id rather leave it as-is.%%%

%%%Alt+Left mouse was never added intentionally to be used in weight paint mode, its supposed to open up a menu of items to select. it just happens not to when selecting pose bones. Making weight sample use ACTIONMOUSE means Ctrl+Left Mouse can be used for bone selection now. I looked into using ACTIONMOUSE for gradient tool but right click cancels from the gradient tool, which is a modal operator so Id rather leave it as-is.%%%

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34143
No description provided.