fix [#34143] Can't Select Bones in Weight paint mode with Left mouse Selection enabled use action-mouse for weight-sample and weight-sample-group rather then left mouse.

Alt+Left-Mouse more or less worked by accident, changing these keymaps makes it so Ctrl+LMB can be used for selection instead.